saving district summary

--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -189,19 +189,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
-      "0             15           39170   82932329558           78.985371   \n",
-      "\n",
-      "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
-      "0               81.87784        0.749809           0.858055           0.651723  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>74.98%</td>\n",
+       "      <td>85.81%</td>\n",
+       "      <td>65.17%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget  Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00               78.99   \n",
+       "\n",
+       "   Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0                  81.88         74.98%            85.81%            65.17%  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,10 +263,10 @@
     "total_students = school_data_complete[\"student_name\"].count()\n",
     "\n",
     "#Adds up the total budget.\n",
-    "total_budget = school_data_complete[\"budget\"].sum()\n",
+    "total_budget = school_data_df[\"budget\"].sum()\n",
     "\n",
     "#Average math score calculation.\n",
-    "avg_math_score = school_data_complete[\"math_score\"].mean()\n",
+    "avg_math_score = student_data_df[\"math_score\"].mean()\n",
     "\n",
     "#Average reading score calculation. \n",
     "avg_reading_score = school_data_complete[\"reading_score\"].mean()\n",
@@ -226,15 +274,15 @@
     "#Percentage of students passing math calculation.\n",
     "pass_math = school_data_complete.loc[school_data_complete[\"math_score\"] >= 70][\"math_score\"].count()\n",
     "\n",
-    "percent_pass_math = pass_math/total_students\n",
+    "percent_pass_math = pass_math/total_students*100\n",
     "\n",
     "#Percentage of students passing reading calculation.\n",
     "pass_reading = school_data_complete.loc[school_data_complete[\"reading_score\"] >=70][\"reading_score\"].count()\n",
     "\n",
-    "percent_pass_reading = pass_reading/total_students\n",
+    "percent_pass_reading = pass_reading/total_students*100\n",
     "\n",
     "#Overall passing calculations\n",
-    "overall_pass = school_data_complete[(school_data_complete[\"math_score\"] >=70) & (school_data_complete[\"reading_score\"] >=70)][\"student_name\"].count()/total_students\n",
+    "overall_pass = school_data_complete[(school_data_complete[\"math_score\"] >=70) & (school_data_complete[\"reading_score\"] >=70)][\"student_name\"].count()/total_students*100\n",
     "                                    \n",
     "#District Summary Data Frame \n",
     "district_summary = pd.DataFrame ({\n",
@@ -242,14 +290,22 @@
     "    \"Total Schools\": [total_schools],\n",
     "    \"Total Students\": [total_students],\n",
     "    \"Total Budget\": [total_budget], \n",
-    "    \"Average Math Score\": [avg_math_score], \n",
-    "    \"Average Reading Score\": [avg_reading_score], \n",
-    "    \"% Passing Math\": [percent_pass_math], \n",
-    "    \"% Passing Reading\": [percent_pass_reading], \n",
-    "    \"% Overall Passing\": [overall_pass]\n",
+    "    \"Average Math Score\": round(avg_math_score,2), \n",
+    "    \"Average Reading Score\": round(avg_reading_score,2), \n",
+    "    \"% Passing Math\": round(percent_pass_math,2), \n",
+    "    \"% Passing Reading\": round(percent_pass_reading,2), \n",
+    "    \"% Overall Passing\": round(overall_pass,2)\n",
     "})\n",
     "\n",
-    "print(district_summary)\n",
+    "district_sum_table = pd.DataFrame(district_summary)\n",
+    "\n",
+    "district_sum_table[\"% Passing Math\"] = district_sum_table[\"% Passing Math\"].map(\"{:,.2f}%\".format)\n",
+    "district_sum_table[\"% Passing Reading\"] = district_sum_table[\"% Passing Reading\"].map(\"{:,.2f}%\".format)\n",
+    "district_sum_table[\"% Overall Passing\"] = district_sum_table[\"% Overall Passing\"].map(\"{:,.2f}%\".format)\n",
+    "district_sum_table[\"Total Budget\"] = district_sum_table[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "district_sum_table[\"Total Students\"] = district_sum_table[\"Total Students\"].map(\"{:,}\".format)\n",
+    "\n",
+    "district_sum_table\n",
     "\n",
     "\n",
     "\n"
