saving school summary

--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -297,6 +297,7 @@
     "    \"% Overall Passing\": round(overall_pass,2)\n",
     "})\n",
     "\n",
+    "#Format district summary df to make it nicer to read.\n",
     "district_sum_table = pd.DataFrame(district_summary)\n",
     "\n",
     "district_sum_table[\"% Passing Math\"] = district_sum_table[\"% Passing Math\"].map(\"{:,.2f}%\".format)\n",
@@ -339,10 +340,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Group by school. \n",
+    "groupedby_school = school_data_complete.set_index(\"school_name\").groupby([\"school_name\"])\n",
+    "\n",
+    "#School types\n",
+    "school_types = school_data_df.set_index(\"school_name\")[\"type\"]\n",
+    "\n",
+    "#Total students per school.\n",
+    "studentsper_school = groupedby_school[\"Student ID\"].count()\n",
+    "\n",
+    "#School's budget\n",
+    "school_budget = school_data_df.set_index(\"school_name\")[\"budget\"]\n",
+    "\n",
+    "#Budget per student = school's budget/total students per school\n",
+    "student_budget = school_data_df.set_index(\"school_name\")[\"budget\"]/school_data_df.set_index(\"school_name\")[\"size\"]\n",
+    "\n",
+    "#Average math score calculation\n",
+    "avg_math = groupedby_school[\"math_score\"].mean()\n",
+    "\n",
+    "#Average reading score calculation\n",
+    "avg_reading = groupedby_school[\"reading_score\"].mean()\n",
+    "\n",
+    "#Percentage of students passing math calculation. \n",
+    "pass_math_school= school_data_complete[school_data_complete[\"math_score\"]>=70].groupby(\"school_name\")[\"Student ID\"].count()/studentsper_school\n",
+    "\n",
+    "percent_pass_math = pass_math_school*100\n",
+    "\n",
+    "#Percentage of students passing reading calculation.\n",
+    "\n",
+    "pass_reading_school=school_data_cmplete[school_data_complete[\"reading_score]>=70\"]]\n"
+   ]
   },
   {
    "cell_type": "markdown",
