--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -340,9 +340,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Overall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.05</td>\n",
+       "      <td>81.03</td>\n",
+       "      <td>66.68%</td>\n",
+       "      <td>81.93%</td>\n",
+       "      <td>54.64%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.06</td>\n",
+       "      <td>83.98</td>\n",
+       "      <td>94.13%</td>\n",
+       "      <td>97.04%</td>\n",
+       "      <td>91.33%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.71</td>\n",
+       "      <td>81.16</td>\n",
+       "      <td>65.99%</td>\n",
+       "      <td>80.74%</td>\n",
+       "      <td>53.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.10</td>\n",
+       "      <td>80.75</td>\n",
+       "      <td>68.31%</td>\n",
+       "      <td>79.30%</td>\n",
+       "      <td>54.29%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.35</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>93.39%</td>\n",
+       "      <td>97.14%</td>\n",
+       "      <td>90.60%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.29</td>\n",
+       "      <td>80.93</td>\n",
+       "      <td>66.75%</td>\n",
+       "      <td>80.86%</td>\n",
+       "      <td>53.53%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>$248,087.00</td>\n",
+       "      <td>$581.00</td>\n",
+       "      <td>83.80</td>\n",
+       "      <td>83.81</td>\n",
+       "      <td>92.51%</td>\n",
+       "      <td>96.25%</td>\n",
+       "      <td>89.23%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.63</td>\n",
+       "      <td>81.18</td>\n",
+       "      <td>65.68%</td>\n",
+       "      <td>81.32%</td>\n",
+       "      <td>53.51%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.07</td>\n",
+       "      <td>80.97</td>\n",
+       "      <td>66.06%</td>\n",
+       "      <td>81.22%</td>\n",
+       "      <td>53.54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>84.04</td>\n",
+       "      <td>94.59%</td>\n",
+       "      <td>95.95%</td>\n",
+       "      <td>90.54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3,999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.84</td>\n",
+       "      <td>80.74</td>\n",
+       "      <td>66.37%</td>\n",
+       "      <td>80.22%</td>\n",
+       "      <td>52.99%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,761</td>\n",
+       "      <td>$1,056,600.00</td>\n",
+       "      <td>$600.00</td>\n",
+       "      <td>83.36</td>\n",
+       "      <td>83.73</td>\n",
+       "      <td>93.87%</td>\n",
+       "      <td>95.85%</td>\n",
+       "      <td>89.89%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.42</td>\n",
+       "      <td>83.85</td>\n",
+       "      <td>93.27%</td>\n",
+       "      <td>97.31%</td>\n",
+       "      <td>90.95%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2,283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.27</td>\n",
+       "      <td>83.99</td>\n",
+       "      <td>93.87%</td>\n",
+       "      <td>96.54%</td>\n",
+       "      <td>90.58%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,800</td>\n",
+       "      <td>$1,049,400.00</td>\n",
+       "      <td>$583.00</td>\n",
+       "      <td>83.68</td>\n",
+       "      <td>83.96</td>\n",
+       "      <td>93.33%</td>\n",
+       "      <td>96.61%</td>\n",
+       "      <td>90.33%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type Total Students Total School Budget  \\\n",
+       "Bailey High School       District          4,976       $3,124,928.00   \n",
+       "Cabrera High School       Charter          1,858       $1,081,356.00   \n",
+       "Figueroa High School     District          2,949       $1,884,411.00   \n",
+       "Ford High School         District          2,739       $1,763,916.00   \n",
+       "Griffin High School       Charter          1,468         $917,500.00   \n",
+       "Hernandez High School    District          4,635       $3,022,020.00   \n",
+       "Holden High School        Charter            427         $248,087.00   \n",
+       "Huang High School        District          2,917       $1,910,635.00   \n",
+       "Johnson High School      District          4,761       $3,094,650.00   \n",
+       "Pena High School          Charter            962         $585,858.00   \n",
+       "Rodriguez High School    District          3,999       $2,547,363.00   \n",
+       "Shelton High School       Charter          1,761       $1,056,600.00   \n",
+       "Thomas High School        Charter          1,635       $1,043,130.00   \n",
+       "Wilson High School        Charter          2,283       $1,319,574.00   \n",
+       "Wright High School        Charter          1,800       $1,049,400.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Bailey High School               $628.00               77.05   \n",
+       "Cabrera High School              $582.00               83.06   \n",
+       "Figueroa High School             $639.00               76.71   \n",
+       "Ford High School                 $644.00               77.10   \n",
+       "Griffin High School              $625.00               83.35   \n",
+       "Hernandez High School            $652.00               77.29   \n",
+       "Holden High School               $581.00               83.80   \n",
+       "Huang High School                $655.00               76.63   \n",
+       "Johnson High School              $650.00               77.07   \n",
+       "Pena High School                 $609.00               83.84   \n",
+       "Rodriguez High School            $637.00               76.84   \n",
+       "Shelton High School              $600.00               83.36   \n",
+       "Thomas High School               $638.00               83.42   \n",
+       "Wilson High School               $578.00               83.27   \n",
+       "Wright High School               $583.00               83.68   \n",
+       "\n",
+       "                       Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "Bailey High School                     81.03         66.68%            81.93%   \n",
+       "Cabrera High School                    83.98         94.13%            97.04%   \n",
+       "Figueroa High School                   81.16         65.99%            80.74%   \n",
+       "Ford High School                       80.75         68.31%            79.30%   \n",
+       "Griffin High School                    83.82         93.39%            97.14%   \n",
+       "Hernandez High School                  80.93         66.75%            80.86%   \n",
+       "Holden High School                     83.81         92.51%            96.25%   \n",
+       "Huang High School                      81.18         65.68%            81.32%   \n",
+       "Johnson High School                    80.97         66.06%            81.22%   \n",
+       "Pena High School                       84.04         94.59%            95.95%   \n",
+       "Rodriguez High School                  80.74         66.37%            80.22%   \n",
+       "Shelton High School                    83.73         93.87%            95.85%   \n",
+       "Thomas High School                     83.85         93.27%            97.31%   \n",
+       "Wilson High School                     83.99         93.87%            96.54%   \n",
+       "Wright High School                     83.96         93.33%            96.61%   \n",
+       "\n",
+       "                      % Passing Overall  \n",
+       "Bailey High School               54.64%  \n",
+       "Cabrera High School              91.33%  \n",
+       "Figueroa High School             53.20%  \n",
+       "Ford High School                 54.29%  \n",
+       "Griffin High School              90.60%  \n",
+       "Hernandez High School            53.53%  \n",
+       "Holden High School               89.23%  \n",
+       "Huang High School                53.51%  \n",
+       "Johnson High School              53.54%  \n",
+       "Pena High School                 90.54%  \n",
+       "Rodriguez High School            52.99%  \n",
+       "Shelton High School              89.89%  \n",
+       "Thomas High School               90.95%  \n",
+       "Wilson High School               90.58%  \n",
+       "Wright High School               90.33%  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Group by school. \n",
     "groupedby_school = school_data_complete.set_index(\"school_name\").groupby([\"school_name\"])\n",
@@ -366,13 +658,42 @@
     "avg_reading = groupedby_school[\"reading_score\"].mean()\n",
     "\n",
     "#Percentage of students passing math calculation. \n",
-    "pass_math_school= school_data_complete[school_data_complete[\"math_score\"]>=70].groupby(\"school_name\")[\"Student ID\"].count()/studentsper_school\n",
+    "pass_math_school= school_data_complete[school_data_complete[\"math_score\"]>=70].groupby(\"school_name\")[\"Student ID\"].count()/studentsper_school*100\n",
     "\n",
-    "percent_pass_math = pass_math_school*100\n",
+    "#percent_pass_math = pass_math_school*100\n",
     "\n",
     "#Percentage of students passing reading calculation.\n",
+    "pass_reading_school=school_data_complete[school_data_complete[\"reading_score\"]>=70].groupby(\"school_name\")[\"Student ID\"].count()/studentsper_school*100\n",
     "\n",
-    "pass_reading_school=school_data_cmplete[school_data_complete[\"reading_score]>=70\"]]\n"
+    "#percent_pass_reading = pass_reading_school*100\n",
+    "\n",
+    "#Calculation for percentage of overall passing.\n",
+    "pass_overall_school= school_data_complete[(school_data_complete[\"math_score\"]>=70) & (school_data_complete[\"reading_score\"]>=70)].groupby(\"school_name\")[\"Student ID\"].count()/studentsper_school*100\n",
+    "\n",
+    "#percent_pass_overall_school = pass_overall_school*100\n",
+    "\n",
+    "school_summary = pd.DataFrame ({\n",
+    "    \"School Type\": school_types, \n",
+    "    \"Total Students\": studentsper_school,\n",
+    "    \"Total School Budget\": school_budget, \n",
+    "    \"Per Student Budget\": student_budget, \n",
+    "    \"Average Math Score\": round(avg_math,2), \n",
+    "    \"Average Reading Score\": round(avg_reading,2), \n",
+    "    \"% Passing Math\": pass_math_school, \n",
+    "    \"% Passing Reading\": pass_reading_school, \n",
+    "    \"% Passing Overall\": pass_overall_school\n",
+    "})\n",
+    "\n",
+    "#Formating table \n",
+    "school_sum_table = pd.DataFrame(school_summary)\n",
+    "\n",
+    "school_sum_table[\"% Passing Math\"] = school_sum_table[\"% Passing Math\"].map(\"{:,.2f}%\".format)\n",
+    "school_sum_table[\"% Passing Reading\"] = school_sum_table[\"% Passing Reading\"].map(\"{:,.2f}%\".format)\n",
+    "school_sum_table[\"% Passing Overall\"] = school_sum_table[\"% Passing Overall\"].map(\"{:,.2f}%\".format)\n",
+    "school_sum_table[\"Total School Budget\"] = school_sum_table[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "school_sum_table[\"Total Students\"] = school_sum_table[\"Total Students\"].map(\"{:,}\".format)\n",
+    "school_sum_table[\"Per Student Budget\"] = school_sum_table[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "school_sum_table\n"
    ]
   },
   {
