--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -712,12 +712,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Overall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.06</td>\n",
+       "      <td>83.98</td>\n",
+       "      <td>94.13%</td>\n",
+       "      <td>97.04%</td>\n",
+       "      <td>91.33%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.42</td>\n",
+       "      <td>83.85</td>\n",
+       "      <td>93.27%</td>\n",
+       "      <td>97.31%</td>\n",
+       "      <td>90.95%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.35</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>93.39%</td>\n",
+       "      <td>97.14%</td>\n",
+       "      <td>90.60%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2,283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.27</td>\n",
+       "      <td>83.99</td>\n",
+       "      <td>93.87%</td>\n",
+       "      <td>96.54%</td>\n",
+       "      <td>90.58%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>84.04</td>\n",
+       "      <td>94.59%</td>\n",
+       "      <td>95.95%</td>\n",
+       "      <td>90.54%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter          1,858       $1,081,356.00   \n",
+       "Thomas High School      Charter          1,635       $1,043,130.00   \n",
+       "Griffin High School     Charter          1,468         $917,500.00   \n",
+       "Wilson High School      Charter          2,283       $1,319,574.00   \n",
+       "Pena High School        Charter            962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00               83.06   \n",
+       "Thomas High School             $638.00               83.42   \n",
+       "Griffin High School            $625.00               83.35   \n",
+       "Wilson High School             $578.00               83.27   \n",
+       "Pena High School               $609.00               83.84   \n",
+       "\n",
+       "                     Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "Cabrera High School                  83.98         94.13%            97.04%   \n",
+       "Thomas High School                   83.85         93.27%            97.31%   \n",
+       "Griffin High School                  83.82         93.39%            97.14%   \n",
+       "Wilson High School                   83.99         93.87%            96.54%   \n",
+       "Pena High School                     84.04         94.59%            95.95%   \n",
+       "\n",
+       "                    % Passing Overall  \n",
+       "Cabrera High School            91.33%  \n",
+       "Thomas High School             90.95%  \n",
+       "Griffin High School            90.60%  \n",
+       "Wilson High School             90.58%  \n",
+       "Pena High School               90.54%  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_five = school_summary.sort_values([\"% Passing Overall\"], ascending=False)\n",
+    "top_five.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -735,10 +870,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Passing Overall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3,999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.84</td>\n",
+       "      <td>80.74</td>\n",
+       "      <td>66.37%</td>\n",
+       "      <td>80.22%</td>\n",
+       "      <td>52.99%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.71</td>\n",
+       "      <td>81.16</td>\n",
+       "      <td>65.99%</td>\n",
+       "      <td>80.74%</td>\n",
+       "      <td>53.20%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.63</td>\n",
+       "      <td>81.18</td>\n",
+       "      <td>65.68%</td>\n",
+       "      <td>81.32%</td>\n",
+       "      <td>53.51%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.29</td>\n",
+       "      <td>80.93</td>\n",
+       "      <td>66.75%</td>\n",
+       "      <td>80.86%</td>\n",
+       "      <td>53.53%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.07</td>\n",
+       "      <td>80.97</td>\n",
+       "      <td>66.06%</td>\n",
+       "      <td>81.22%</td>\n",
+       "      <td>53.54%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District          3,999       $2,547,363.00   \n",
+       "Figueroa High School     District          2,949       $1,884,411.00   \n",
+       "Huang High School        District          2,917       $1,910,635.00   \n",
+       "Hernandez High School    District          4,635       $3,022,020.00   \n",
+       "Johnson High School      District          4,761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00               76.84   \n",
+       "Figueroa High School             $639.00               76.71   \n",
+       "Huang High School                $655.00               76.63   \n",
+       "Hernandez High School            $652.00               77.29   \n",
+       "Johnson High School              $650.00               77.07   \n",
+       "\n",
+       "                       Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "Rodriguez High School                  80.74         66.37%            80.22%   \n",
+       "Figueroa High School                   81.16         65.99%            80.74%   \n",
+       "Huang High School                      81.18         65.68%            81.32%   \n",
+       "Hernandez High School                  80.93         66.75%            80.86%   \n",
+       "Johnson High School                    80.97         66.06%            81.22%   \n",
+       "\n",
+       "                      % Passing Overall  \n",
+       "Rodriguez High School            52.99%  \n",
+       "Figueroa High School             53.20%  \n",
+       "Huang High School                53.51%  \n",
+       "Hernandez High School            53.53%  \n",
+       "Johnson High School              53.54%  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bottom_five = school_summary.sort_values([\"% Passing Overall\"], ascending=True)\n",
+    "bottom_five.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -766,10 +1038,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th Grade</th>\n",
+       "      <th>10th Grade</th>\n",
+       "      <th>11th Grade</th>\n",
+       "      <th>12th Grade</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.08</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>77.52</td>\n",
+       "      <td>76.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.09</td>\n",
+       "      <td>83.15</td>\n",
+       "      <td>82.77</td>\n",
+       "      <td>83.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.40</td>\n",
+       "      <td>76.54</td>\n",
+       "      <td>76.88</td>\n",
+       "      <td>77.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.36</td>\n",
+       "      <td>77.67</td>\n",
+       "      <td>76.92</td>\n",
+       "      <td>76.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.04</td>\n",
+       "      <td>84.23</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>83.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.44</td>\n",
+       "      <td>77.34</td>\n",
+       "      <td>77.14</td>\n",
+       "      <td>77.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.79</td>\n",
+       "      <td>83.43</td>\n",
+       "      <td>85.00</td>\n",
+       "      <td>82.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.03</td>\n",
+       "      <td>75.91</td>\n",
+       "      <td>76.45</td>\n",
+       "      <td>77.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.19</td>\n",
+       "      <td>76.69</td>\n",
+       "      <td>77.49</td>\n",
+       "      <td>76.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.63</td>\n",
+       "      <td>83.37</td>\n",
+       "      <td>84.33</td>\n",
+       "      <td>84.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.86</td>\n",
+       "      <td>76.61</td>\n",
+       "      <td>76.40</td>\n",
+       "      <td>77.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.42</td>\n",
+       "      <td>82.92</td>\n",
+       "      <td>83.38</td>\n",
+       "      <td>83.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.59</td>\n",
+       "      <td>83.09</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>83.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.09</td>\n",
+       "      <td>83.72</td>\n",
+       "      <td>83.20</td>\n",
+       "      <td>83.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.26</td>\n",
+       "      <td>84.01</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>83.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       9th Grade  10th Grade  11th Grade  12th Grade\n",
+       "school_name                                                         \n",
+       "Bailey High School         77.08       77.00       77.52       76.49\n",
+       "Cabrera High School        83.09       83.15       82.77       83.28\n",
+       "Figueroa High School       76.40       76.54       76.88       77.15\n",
+       "Ford High School           77.36       77.67       76.92       76.18\n",
+       "Griffin High School        82.04       84.23       83.84       83.36\n",
+       "Hernandez High School      77.44       77.34       77.14       77.19\n",
+       "Holden High School         83.79       83.43       85.00       82.86\n",
+       "Huang High School          77.03       75.91       76.45       77.23\n",
+       "Johnson High School        77.19       76.69       77.49       76.86\n",
+       "Pena High School           83.63       83.37       84.33       84.12\n",
+       "Rodriguez High School      76.86       76.61       76.40       77.69\n",
+       "Shelton High School        83.42       82.92       83.38       83.78\n",
+       "Thomas High School         83.59       83.09       83.50       83.50\n",
+       "Wilson High School         83.09       83.72       83.20       83.04\n",
+       "Wright High School         83.26       84.01       83.84       83.64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Grade series grouped by school\n",
+    "ninth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"9th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "tenth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"10th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "eleventh_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"11th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "twelveth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"12th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "\n",
+    "#Combination of series into dataframe \n",
+    "math_scores_by_grade_df= pd.DataFrame ({\"9th Grade\": ninth_grade, \"10th Grade\": tenth_grade, \"11th Grade\": eleventh_grade, \"12th Grade\": twelveth_grade})\n",
+    "math_scores_by_grade_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -790,7 +1241,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Grade series grouped by school\n",
+    "ninth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"9th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "tenth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"10th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "eleventh_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"11th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "twelveth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"12th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "\n",
+    "#Combination of series into dataframe \n",
+    "math_scores_by_grade_df= pd.DataFrame ({\"9th Grade\": ninth_grade, \"10th Grade\": tenth_grade, \"11th Grade\": eleventh_grade, \"12th Grade\": twelveth_grade})\n",
+    "math_scores_by_grade_df"
+   ]
   },
   {
    "cell_type": "markdown",
