--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -1002,7 +1002,7 @@
        "Johnson High School              53.54%  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,19 +1238,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th Grade</th>\n",
+       "      <th>10th Grade</th>\n",
+       "      <th>11th Grade</th>\n",
+       "      <th>12th Grade</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.30</td>\n",
+       "      <td>80.91</td>\n",
+       "      <td>80.95</td>\n",
+       "      <td>80.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.68</td>\n",
+       "      <td>84.25</td>\n",
+       "      <td>83.79</td>\n",
+       "      <td>84.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.20</td>\n",
+       "      <td>81.41</td>\n",
+       "      <td>80.64</td>\n",
+       "      <td>81.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.63</td>\n",
+       "      <td>81.26</td>\n",
+       "      <td>80.40</td>\n",
+       "      <td>80.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.37</td>\n",
+       "      <td>83.71</td>\n",
+       "      <td>84.29</td>\n",
+       "      <td>84.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.87</td>\n",
+       "      <td>80.66</td>\n",
+       "      <td>81.40</td>\n",
+       "      <td>80.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.68</td>\n",
+       "      <td>83.32</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>84.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.29</td>\n",
+       "      <td>81.51</td>\n",
+       "      <td>81.42</td>\n",
+       "      <td>80.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.26</td>\n",
+       "      <td>80.77</td>\n",
+       "      <td>80.62</td>\n",
+       "      <td>81.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.81</td>\n",
+       "      <td>83.61</td>\n",
+       "      <td>84.34</td>\n",
+       "      <td>84.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>80.99</td>\n",
+       "      <td>80.63</td>\n",
+       "      <td>80.86</td>\n",
+       "      <td>80.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.12</td>\n",
+       "      <td>83.44</td>\n",
+       "      <td>84.37</td>\n",
+       "      <td>82.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.73</td>\n",
+       "      <td>84.25</td>\n",
+       "      <td>83.59</td>\n",
+       "      <td>83.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.94</td>\n",
+       "      <td>84.02</td>\n",
+       "      <td>83.76</td>\n",
+       "      <td>84.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.83</td>\n",
+       "      <td>83.81</td>\n",
+       "      <td>84.16</td>\n",
+       "      <td>84.07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       9th Grade  10th Grade  11th Grade  12th Grade\n",
+       "school_name                                                         \n",
+       "Bailey High School         81.30       80.91       80.95       80.91\n",
+       "Cabrera High School        83.68       84.25       83.79       84.29\n",
+       "Figueroa High School       81.20       81.41       80.64       81.38\n",
+       "Ford High School           80.63       81.26       80.40       80.66\n",
+       "Griffin High School        83.37       83.71       84.29       84.01\n",
+       "Hernandez High School      80.87       80.66       81.40       80.86\n",
+       "Holden High School         83.68       83.32       83.82       84.70\n",
+       "Huang High School          81.29       81.51       81.42       80.31\n",
+       "Johnson High School        81.26       80.77       80.62       81.23\n",
+       "Pena High School           83.81       83.61       84.34       84.59\n",
+       "Rodriguez High School      80.99       80.63       80.86       80.38\n",
+       "Shelton High School        84.12       83.44       84.37       82.78\n",
+       "Thomas High School         83.73       84.25       83.59       83.83\n",
+       "Wilson High School         83.94       84.02       83.76       84.32\n",
+       "Wright High School         83.83       83.81       84.16       84.07"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Grade series grouped by school\n",
-    "ninth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"9th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
-    "tenth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"10th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
-    "eleventh_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"11th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
-    "twelveth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"12th\"].groupby(\"school_name\").mean()[\"math_score\"], 2)\n",
+    "ninth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"9th\"].groupby(\"school_name\").mean()[\"reading_score\"], 2)\n",
+    "tenth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"10th\"].groupby(\"school_name\").mean()[\"reading_score\"], 2)\n",
+    "eleventh_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"11th\"].groupby(\"school_name\").mean()[\"reading_score\"], 2)\n",
+    "twelveth_grade = round(school_data_complete[school_data_complete[\"grade\"]==\"12th\"].groupby(\"school_name\").mean()[\"reading_score\"], 2)\n",
     "\n",
     "#Combination of series into dataframe \n",
-    "math_scores_by_grade_df= pd.DataFrame ({\"9th Grade\": ninth_grade, \"10th Grade\": tenth_grade, \"11th Grade\": eleventh_grade, \"12th Grade\": twelveth_grade})\n",
-    "math_scores_by_grade_df"
+    "reading_scores_by_grade_df= pd.DataFrame ({\"9th Grade\": ninth_grade, \"10th Grade\": tenth_grade, \"11th Grade\": eleventh_grade, \"12th Grade\": twelveth_grade})\n",
+    "reading_scores_by_grade_df"
    ]
   },
   {
@@ -1277,7 +1446,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spending_bins = [0, 595, 625, 655, 675]\n",
+    "bin_names = [\"<$595\", \"\"]\n"
+   ]
   },
   {
    "cell_type": "markdown",
