--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -1726,16 +1726,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-151-0bcb1b3ff342>, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-151-0bcb1b3ff342>\"\u001b[0;36m, line \u001b[0;32m19\u001b[0m\n\u001b[0;31m    by_type = by_type [[\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>Overall Passing Rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.41</td>\n",
+       "      <td>83.90</td>\n",
+       "      <td>93.70%</td>\n",
+       "      <td>96.65%</td>\n",
+       "      <td>90.56%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.99</td>\n",
+       "      <td>80.96</td>\n",
+       "      <td>66.52%</td>\n",
+       "      <td>80.91%</td>\n",
+       "      <td>53.70%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score % Passing Math  \\\n",
+       "School Type                                                             \n",
+       "Charter                   83.41                  83.90         93.70%   \n",
+       "District                  76.99                  80.96         66.52%   \n",
+       "\n",
+       "            % Passing Reading Overall Passing Rate  \n",
+       "School Type                                         \n",
+       "Charter                96.65%               90.56%  \n",
+       "District               80.91%               53.70%  "
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1758,7 +1823,7 @@
     "    \"Overall Passing Rate\": percent_overall\n",
     "})\n",
     " \n",
-    "    by_type = by_type [[\n",
+    "by_type = by_type [[\n",
     "     \"Average Math Score\", \n",
     "     \"Average Reading Score\", \n",
     "     \"% Passing Math\", \n",
@@ -1766,6 +1831,7 @@
     "     \"Overall Passing Rate\"\n",
     " ]]\n",
     "\n",
+    "by_type.index.name = \"School Type\"\n",
     "by_type\n"
    ]
   },
